alpaca-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpaca-test
  labels:
    ver: "2"
    app: alpaca
    env: "test"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpaca
  template:
    metadata:
      labels:
        app: alpaca
    spec:
      containers:
      - name: alpaca-test
        image: gcr.io/kuar-demo/kuard-amd64:green
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
