amicontained-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: amicontained
spec:
  containers:
  - image: jess/amicontained
    name: amicontained
    command: [ "/bin/sh", "-c", "--" ]
    args: [ "amicontained" ]
    resources:
      limits:
        memory: "64Mi"
        cpu: "250m"
      requests:
        memory: "32Mi"
        cpu: "125m"
