bandicoot-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  bandicoot-prod
  labels:
    ver: "2"
    app: bandicoot
    env: "prod" 
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: bandicoot 
  template:
    metadata:
      labels:
        app: bandicoot
    spec:
      containers:
      - name: bandicoot-prod
        image: gcr.io/kuar-demo/kuard-amd64:green
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
