chatgpt_question.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db-client 
spec:
  containers:
  - name: db-client
    image: nginx:1.21
