kuard-pod-runtimeclass.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
  labels:
    app: kuard
  spec:
    runtimeClassName: firecracker
    containers:
      - image: gcr.io/kuar-demo/kuard-amd64:blue
        name: kuard
        ports:
          - containerPort: 8080
            name: http
            protocol: TCP
